--- a/chapter6.tex
+++ b/chapter6.tex
@@ -5,7 +5,9 @@
 \section{Introduction}
 
 We consider herein the solution to steady-state viscous Stokes flow on the surface of a sphere, governed by: 
-	\begin{align}
+	\authnote{Where did we go wrong? Our vector laplacian does not have a
+  curl component included. How do we derive that from here?} 
+  \begin{align}
 \div{[\eta(\grad{\vu} + (\grad{\vu})^T)]} + Ra T \hat{r} & = \grad{p} \label{eq:stokes_momentum} \\
 %\pd{T}{t} + (\vu \cdot \grad) T & = \Laplacian T \ \ \ \ \ \ \ \ \textsl{(Energy)}\label{eq:stokes_energy}
 \div{\vu} & = 0 \label{eq:stokes_continuity} 
@@ -66,11 +68,26 @@ For decades, a major push has been executed in science to parallelize algorithms
 
 To prepare the RBF community for the future, we develop algorithms employing two levels of parallelization: first the MPI standard spans computation across multiple CPUs, and second computation is distributed across the many processing cores of GPU accelerators. 
 
-The two level parallelization can even be extended to three level parallelism with pThreads or OpenMP \cite{NVidia_multi-gpu_example}. While OpenCL provides the means to target parallelism on either multi-core CPUs or many-core GPUs, it does not allow a parallel kernel on one hardware interact with a parallel kernel on the another. That is to say, an OpenCL kernel on the CPU cannot launch kernels on the GPU s 
+The two level parallelization can even be extended to three level parallelism
+with pThreads or OpenMP \cite{NVidia_multi-gpu_example}. While OpenCL provides
+the means to target parallelism on either multi-core CPUs or many-core GPUs, it
+does not allow a parallel kernel on one hardware interact with a parallel kernel
+on the another. That is to say, an OpenCL kernel on the CPU cannot launch
+kernels on the GPU.  
 
-Our goal is to demonstrate to the geosciences that RBF-FD can function well on both hyperbolic and elliptic problems. In \cite{bolligFlyerErlebacher2011} we introduced a multi-GPU implementation of RBF-FD and demonstrated the method's strong ability to stably advect solid bodies on the sphere. In this paper we continue toward the goal of RBF-FD solutions for fluid flow problems with a multi-GPU Poisson solver for steady-state Stokes flow. In this context, speed is not a paramount issue. 
+Our goal is to demonstrate to the geosciences that RBF-FD can function well on
+both hyperbolic and elliptic problems. In \cite{bolligFlyerErlebacher2011} we
+introduced a multi-GPU implementation of RBF-FD and demonstrated the method's
+strong ability to stably advect solid bodies on the sphere. In this paper we
+continue toward the goal of RBF-FD solutions for fluid flow problems with a
+multi-GPU Poisson solver for steady-state Stokes flow. In this context, speed is
+not a paramount issue.
 
-Related work on RBF methods targeting the GPU is quite limited. Schmidt et al. \cite{Schmidt2009b} solve an implicit system for a global RBF method using Accelerys Jacket in Matlab. Our work in \cite{Bollig2011} introduced the first parallel implementation of RBF-FD for explicit advection capable of spanning multiple CPUs as well as multiple GPUs. 
+Related work on RBF methods targeting the GPU is quite limited. Schmidt et al.
+\cite{Schmidt2009b} solve an implicit system for a global RBF method using
+Accelerys Jacket in Matlab. Our work in \cite{Bollig2011} introduced the first
+parallel implementation of RBF-FD for explicit advection capable of spanning
+multiple CPUs as well as multiple GPUs. 
 
 Related work on multi-CPU or multi-GPU RBFs
 \begin{itemize} 
@@ -96,7 +113,24 @@ Parallel GMRES
 
 This article continues our effort with an implementation of RBF-FD on both single and multiple-GPUs for elliptic PDEs. In the next section we introduce 
 
+\section{Bad Problem} 
 
+Our initial derivation of the Stokes problem was incorrect. What we thought was
+the proper identity reduced the problem to simple scalar velocity laplacians and
+pressure gradients. The correct formulation of Stokes flow in 3D would have a
+curl component connecting each dimension. 
+
+Rather than start over and reformulate our problem, we opted to continue
+development of our GPU-based solver with the recognition that the problem we
+posed is actually a coupled Poisson problem and can be solved using the same
+iterative solver. By implementing and testing the solver and preconditioners for
+one problem, we prepare for the other.  
+
+\subsection{Details}
+Items to test for our solver: GFLOPs throughput (CPU,GPU), Convergence of Solver (in
+iteration residual) vs Preconditioners.
+
+Test problems: Sphere coupled poisson. Annulus. Stokes on annulus? 
 
 
 
