--- a/karen.tex
+++ b/karen.tex
@@ -87,12 +87,12 @@
 \mainmatter
 
 \input{chapter1.tex}
-\input{chapter2.tex}
-\input{chapter3.tex} 
-\input{chapter4.tex} 
-\input{chapter5.tex} 
-\input{chapter6.tex}
-\input{chapter7.tex}
+%\input{chapter2.tex}
+%\input{chapter3.tex} 
+%\input{chapter4.tex} 
+%\input{chapter5.tex} 
+%\input{chapter6.tex}
+%\input{chapter7.tex}
 %\input{publications.tex}
 
 need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
