Write write write

--- a/latex/chapter1.tex
+++ b/latex/chapter1.tex
@@ -154,17 +154,17 @@ RBF centered at $\{\vx_j\}_{j=1}^{n}$.
 \centering
 	\begin{subfigure}[b]{0.25\textwidth}
     	\centering
-		\includegraphics[width=1.0\textwidth]{figures/paper1/figures/ga_rbf2d-eps-converted-to.pdf} 
+		\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/ga_rbf2d-eps-converted-to.pdf} 
 		\caption{Gaussian}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.25\textwidth}
 	\centering
-		\includegraphics[width=1.0\textwidth]{figures/paper1/figures/imq_rbf2d-eps-converted-to.pdf}
+		\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/imq_rbf2d-eps-converted-to.pdf}
 		\caption{Inverse Multiquadric}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.25\textwidth}
 	\centering
-		\includegraphics[width=1.0\textwidth]{figures/paper1/figures/mq_rbf2d-eps-converted-to.pdf} 
+		\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/mq_rbf2d-eps-converted-to.pdf} 
 		\caption{Multiquadric}
 	\end{subfigure} 
     \caption{Commonly used RBFs.}
@@ -260,7 +260,7 @@ no results from scaling tests. Yokota, Barba and Knepley \cite{Yokota2010} apply
 
 \begin{figure}[t]
     \centering
-    \includegraphics[scale=0.4]{figures/paper1/figures/trimmed_interpolate2D_ga__m.pdf}
+    \includegraphics[scale=0.4]{../figures/paper1/figures/trimmed_interpolate2D_ga__m.pdf}
     \caption{RBF interpolation using 15 translates of the Gaussian RBF with $\epsilon=2$. One RBF is centered at each node in the domain. Linear
     combinations of these produce an interpolant over the domain passing through known function values. }
     \label{fig:rbfInterpolation}
