--- a/latex/chapter6.tex
+++ b/latex/chapter6.tex
@@ -449,8 +449,8 @@ The manufactured solution is shown in Figure~\ref{fig:manufactured_solution}. A 
 
 \begin{figure} 
 \centering
-\subfloat[Solution $Q_x( g(x) )$ with $g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20}$]{\includegraphics[width=1.0\textwidth]{figures/paper2/figures/U_exact.png}} \\
-\subfloat[Right Hand Side (Constant Viscosity)]{\includegraphics[width=1.0\textwidth]{figures/paper2/figures/RHS.png}}
+\subfloat[Solution $Q_x( g(x) )$ with $g(x) = 8 Y_{3}^{2} - 3Y_{10}^{5} + Y_{20}^{20}$]{\includegraphics[width=1.0\textwidth]{../figures/paper2/figures/U_exact.png}} \\
+\subfloat[Right Hand Side (Constant Viscosity)]{\includegraphics[width=1.0\textwidth]{../figures/paper2/figures/RHS.png}}
 \caption{A divergence free field is manufactured for the sphere. }
 \label{fig:manufactured_solution}
 \end{figure} 
