New notes to flesh out. WRiting is picking up steam. Need to generate a few more quantitative results, then write about them

--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -87,6 +87,8 @@
 \mainmatter
 
 \input{chapter1.tex}
+\input{RBFFD_as_SpMV.tex}
+\input{SpMV_GPU.tex}
 \input{GMRES.tex}
 \input{ViennaCL.tex}
 \input{future_of_gpus.tex}
