--- a/latex/GMRES.tex
+++ b/latex/GMRES.tex
@@ -5,3 +5,5 @@ The GMRES algorithm follows Algorithm~\ref{alg:gmres_general}.
 The Arnoldi process can be completed using in a variety of ways. Some libraries like CUSP and \cite{Saad2003} prefer the straightforward Givens rotations because they are easily parallelizable. The givens algorithm is provided in Algorithm~\ref{alg:gmres_givens}
 
 Others like [...] prefer to use an alternate algorithm. This algorithm is demonstrated in Algorithm~\ref{alg:gmres_h}.
+
+Parallelizing the algorithm is possible with communication points listed in red (*). 
