Fixed the figure locations. PDF builds completely. Need to continue fleshing

--- a/latex/chapter2.tex
+++ b/latex/chapter2.tex
@@ -208,13 +208,13 @@ Weights for both classical Finite Difference and RBF-FD can be obtained through 
 	\centering
 	\begin{subfigure}[m]{0.6\textwidth}
 		\centering
-		\includegraphics[width=1.0\textwidth]{figures/chapter2/preview_stencils_example.png}
+		\includegraphics[width=1.0\textwidth]{../figures/chapter2/preview_stencils_example.png}
 		\caption{A 13 node RBF-FD stencil of randomly distributed nodes. The stencil centered at the green square contains the 12 nearest neighbors contained within the minimum covering circle drawn in purple.}
 		\label{fig:stencil_example_random}
 	\end{subfigure}
 	\begin{subfigure}[m]{0.35\textwidth}
 		\centering
-		\includegraphics[width=1.0\textwidth]{figures/chapter2/RBFFD_single-eps-converted-to.pdf}
+		\includegraphics[width=1.0\textwidth]{../figures/chapter2/RBFFD_single-eps-converted-to.pdf}
 		\caption{A 75 node RBF-FD stencil with blue (negative) and red (positive) differentiation weights to approximate advective operator at the square. Stencils weights indicated by scale of disk radii. (Image courtesy of Bengt Fornberg and Natasha Flyer)}
 		\label{fig:stencil_example_sphere}
 	\end{subfigure}
