--- a/latex/chapter4.tex
+++ b/latex/chapter4.tex
@@ -13,11 +13,11 @@ I also produced a Matlab script to generate the contours for any stencil size an
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{figures/chapter4/epsilon_contours/labeled_contour_n20.pdf}
-\includegraphics[width=0.45\textwidth]{figures/chapter4/epsilon_contours/labeled_contour_n40.pdf}
-\includegraphics[width=0.45\textwidth]{figures/chapter4/epsilon_contours/labeled_contour_n60.pdf}
-\includegraphics[width=0.45\textwidth]{figures/chapter4/epsilon_contours/labeled_contour_n80.pdf}
-\includegraphics[width=0.45\textwidth]{figures/chapter4/epsilon_contours/labeled_contour_n100.pdf}
+\includegraphics[width=0.45\textwidth]{../figures/chapter4/epsilon_contours/labeled_contour_n20.pdf}
+\includegraphics[width=0.45\textwidth]{../figures/chapter4/epsilon_contours/labeled_contour_n40.pdf}
+\includegraphics[width=0.45\textwidth]{../figures/chapter4/epsilon_contours/labeled_contour_n60.pdf}
+\includegraphics[width=0.45\textwidth]{../figures/chapter4/epsilon_contours/labeled_contour_n80.pdf}
+\includegraphics[width=0.45\textwidth]{../figures/chapter4/epsilon_contours/labeled_contour_n100.pdf}
 \caption{Contours for choosing $\epsilon$ for $n=20$, 40, 60, 80 and 100 on the unit sphere as a function of $\sqrt{N}$. Contours assume near uniform distribution of nodes (e.g., maximum determinant nodes, icosahedral grids and spherical centroidal voronoi tessellations). Superimposed above each contour are parameters for the linear regression of the line, $c_{1} \sqrt{N} - c_{2}$. }
 \label{fig:epsilon_contours}
 \end{figure}
@@ -108,13 +108,13 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_noHV.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/eigs_N4096_n101_noHV.pdf}
 	\caption{No Hypervsiscosity}
 	\label{fig:vortex_eigs_nohv}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/eigs_N4096_n101_HV_k4_gamma40.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/eigs_N4096_n101_HV_k4_gamma40.pdf}
 	\caption{With Hyperviscosity}
 	\label{fig:vortex_eigs_hv}
 \end{subfigure}
@@ -127,13 +127,13 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/vortexComputedSolution-eps-converted-to.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/vortexComputedSolution-eps-converted-to.pdf}
 	\caption{Computed Solution}
 	\label{fig:vortex_approx}
 \end{subfigure} 
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/vortex_rollup/vortexRelativeError-eps-converted-to.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/vortexRelativeError-eps-converted-to.pdf}
 	\caption{Relative Absolute Error}
 	\label{fig:vortex_relerr}
 \end{subfigure}
@@ -147,7 +147,7 @@ For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ 
 
 \begin{figure}[htbp!]
 \begin{center}
-\includegraphics[width=3in] {figures/paper1/figures/vortex_rollup/convergence_plot_hv.pdf}
+\includegraphics[width=3in] {../figures/paper1/figures/vortex_rollup/convergence_plot_hv.pdf}
 \caption{Convergence plot for vortex roll-up at $t=3$. }
 \label{fig:conv_plot_vortex_hv}
 \end{center}
@@ -214,12 +214,12 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/eigs_N4096_n101_noHV_SCALED.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/cosine_bell/eigs_N4096_n101_noHV_SCALED.pdf}
 	\caption{No Hyperviscosity}
 	\label{fig:cosine_eigs_nohv}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/eigs_HV_N4096_n101_k8_gamma5e_m2_SCALED.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/cosine_bell/eigs_HV_N4096_n101_k8_gamma5e_m2_SCALED.pdf}
 	\caption{With Hyperviscosity}
 	\label{fig:cosine_eigs_hv}
 \end{subfigure}
@@ -232,12 +232,12 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{figure}[ht!]
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/trimmed_ComputedSolution_ManualBar.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/cosine_bell/trimmed_ComputedSolution_ManualBar.pdf}
 	\caption{10 Revolutions}
 	\label{fig:cosine_approx}
 \end{subfigure}
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=1.0\textwidth]{figures/paper1/figures/cosine_bell/trimmed_Error_CoveredScale2.pdf}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/cosine_bell/trimmed_Error_CoveredScale2.pdf}
 	\caption{Absolute Error at $10$ Revolutions}
 	\label{fig:cosine_abserror}
 \end{subfigure}
@@ -265,7 +265,7 @@ Figure~\ref{fig:cosine_10revs} shows the cosine bell transported ten full revolu
 
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=3in]{figures/paper1/figures/cosine_bell/convergence_plot_hv.pdf}
+\includegraphics[width=3in]{../figures/paper1/figures/cosine_bell/convergence_plot_hv.pdf}
 \caption{Convergence plot for cosine bell advection. Normalized $\ell_2$ error at 10 revolutions with hyperviscosity enabled. }
 \label{fig:conv_cosine_bell}
 \end{center}
