--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -92,12 +92,12 @@
 \input{GMRES.tex}
 \input{ViennaCL.tex}
 \input{future_of_gpus.tex}
-%\input{chapter2.tex}
-%\input{chapter3.tex} 
-%\input{chapter4.tex} 
-%\input{chapter5.tex} 
-%\input{chapter6.tex}
-%\input{chapter7.tex}
+\input{chapter2.tex}
+\input{chapter3.tex} 
+\input{chapter4.tex} 
+\input{chapter5.tex} 
+\input{chapter6.tex}
+\input{chapter7.tex}
 \input{publications.tex}
 
 %%\input{introduction.tex} 
