--- a/latex/optimizations.tex
+++ b/latex/optimizations.tex
@@ -23,37 +23,37 @@ These results were run on Keeneland. The changes to MPI communication are the re
 \begin{figure}[htbp]
 \centering
 \begin{subfigure}[b]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/speedup_1proc_oneWarpPerStencil.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/speedup_1proc_oneWarpPerStencil.pdf}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
 \label{fig:alltoall_1proc_warp}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/speedup_1CPU_vs_NCPU.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/speedup_1CPU_vs_NCPU.pdf}
 \caption{Multi-CPU strong scaling on Keeneland for one warp per stencil}
 \label{fig:alltoall_multicpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/speedup_1CPU_vs_NGPU_WarpPerStencil.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/speedup_1CPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one CPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_cpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/speedup_1GPU_vs_NGPU_WarpPerStencil.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/speedup_1GPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one GPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_gpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/multiCPU_costs.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/multiCPU_costs.pdf}
 \caption{Multi-CPU benchmarks by component on Keeneland}
 \label{fig:alltoall_multicpu_costs}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{figures/chapter5/alltoallv/multiGPU_warp_costs.pdf}
+\includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/multiGPU_warp_costs.pdf}
 \caption{Multi-GPU benchmarks by component on Keeneland}
 \label{fig:alltoall_multigpu_costs}
 \end{subfigure} 
