--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -86,19 +86,19 @@
 
 \mainmatter
 
-\input{chapter1.tex}
-\input{RBFFD_as_SpMV.tex}
-\input{SpMV_GPU.tex}
-\input{GMRES.tex}
+%\input{chapter1.tex}
+%\input{RBFFD_as_SpMV.tex}
+%\input{SpMV_GPU.tex}
+%\input{GMRES.tex}
 \input{ViennaCL.tex}
-\input{future_of_gpus.tex}
-\input{chapter2.tex}
-\input{chapter3.tex} 
-\input{chapter4.tex} 
-\input{chapter5.tex} 
-\input{chapter6.tex}
-\input{chapter7.tex}
-\input{publications.tex}
+%\input{future_of_gpus.tex}
+%\input{chapter2.tex}
+%\input{chapter3.tex} 
+%\input{chapter4.tex} 
+%\input{chapter5.tex} 
+%\input{chapter6.tex}
+%\input{chapter7.tex}
+%\input{publications.tex}
 
 %%\input{introduction.tex} 
 %%\input{grid_generation.tex}
