--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -90,7 +90,7 @@
 %\input{RBFFD_as_SpMV.tex}
 %\input{SpMV_GPU.tex}
 %\input{GMRES.tex}
-\input{ViennaCL.tex}
+%\input{ViennaCL.tex}
 %\input{future_of_gpus.tex}
 %\input{chapter2.tex}
 %\input{chapter3.tex} 
