--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -86,7 +86,7 @@
 
 \mainmatter
 
-%\input{chapter1.tex}
+\input{chapter1.tex}
 %\input{RBFFD_as_SpMV.tex}
 %\input{SpMV_GPU.tex}
 %\input{GMRES.tex}
@@ -100,12 +100,12 @@
 %\input{chapter7.tex}
 %\input{publications.tex}
 
-%%\input{introduction.tex} 
-%%\input{grid_generation.tex}
-%%\input{parabolic_equations.tex}
-%%\input{hyperbolic_equations.tex}
-%%\input{parallel_gmres.tex} 
-
+%\input{introduction.tex} 
+%\input{grid_generation.tex}
+%\input{parabolic_equations.tex}
+%\input{hyperbolic_equations.tex}
+%\input{parallel_gmres.tex} 
+%
 %\appendix
 %\input{appendix1.tex}
 %\input{appendix2.tex}
